// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test customer schema 1`] = `
Object {
  "errorMessage": "",
  "errorPath": Array [],
  "isValid": true,
  "properties": Object {
    "address": Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
      "properties": Object {
        "line1": Object {
          "errorMessage": "",
          "errorPath": Array [],
          "isValid": true,
        },
      },
    },
    "name": Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
  },
}
`;

exports[`Test index type 1`] = `
Object {
  "errorMessage": "",
  "errorPath": Array [],
  "isValid": true,
  "properties": Object {
    "address": Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
      "properties": Object {
        "line1": Object {
          "errorMessage": "",
          "errorPath": Array [],
          "isValid": true,
        },
      },
    },
    "cars": Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
      "properties": Object {
        "rugby": Object {
          "errorMessage": "",
          "errorPath": Array [],
          "isValid": true,
          "properties": Object {
            "vin": Object {
              "errorMessage": "",
              "errorPath": Array [],
              "isValid": true,
            },
          },
        },
      },
    },
    "name": Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
  },
}
`;
